# google-cloud

./: .gitignore  pyproject.toml
src/google_cloud/: books.py  calendar.py  contact_utils.py  contacts.py  docs.py  drive.py  service.py  spreadsheet.py  tasks.py  utils.py
src/google_cloud.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_service.py
