[project]
name = "google-cloud"
version = "0.0.1"
authors = [
  { name="David Feeley", email="davidpfeeley@gmail.com" },
]
description = "A package to wrap some google cloud apis (sheets, drive)"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
	'google-api-python-client',
	'google-auth-oauthlib',
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
tests = [
	"pytest",
]


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config -ra"
testpaths = "tests"
pythonpath = "src"
